Fix alignment on chat card and throw warningif there's no critical injuries found

--- a/less/chat.less
+++ b/less/chat.less
@@ -21,7 +21,7 @@
   grid-area      : d6-data;
   display        : flex;
   padding-left: 5px;
-  align-items: baseline;
+  align-items: center;
 }
 .rollcard-subtitle {
   display: grid;
