--- a/main.css
+++ b/main.css
@@ -1130,7 +1130,7 @@ ol {
   grid-area: d6-data;
   display: flex;
   padding-left: 5px;
-  align-items: baseline;
+  align-items: center;
 }
 .rollcard-subtitle {
   display: grid;
